--- a/themes/hugo-nanx2020/layouts/blog/single.html
+++ b/themes/hugo-nanx2020/layouts/blog/single.html
@@ -83,6 +83,6 @@
         </div>
     </div>
 
-    {{ partial "utterances.html" .}}
+    {{ partial "disqus.html" .}}
     {{ partial "footer" . }}
 {{ end }}
