--- a/themes/hugo-xmin/static/css/fonts.css
+++ b/themes/hugo-xmin/static/css/fonts.css
@@ -1,5 +1,6 @@
 body {
-  font-family: Optima, Candara, Calibri, Arial, sans-serif;
+  font-family: Calibri, Optima, Candara, Arial, sans-serif;
+  font-size: 110%;
 }
 code {
   font-family: "Lucida Console", Monaco, monospace;
