--- a/themes/hugo-xmin/static/css/fonts.css
+++ b/themes/hugo-xmin/static/css/fonts.css
@@ -1,8 +1,8 @@
 body {
-  font-family: Calibri, Optima, Candara, Arial, sans-serif;
-  font-size: 110%;
+  font-family: Seravek, Calibri, Optima, Candara, Arial, sans-serif;
+  font-size: 115%;
 }
 code {
-  font-family: "Lucida Console", Monaco, monospace;
+  font-family: Consolas, "Lucida Console", Monaco, monospace;
   font-size: 85%;
 }
