--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Seravek, Optima, Candara, Calibri, Droid Sans, Arial, sans-serif;
+  font-family: Calibri, Seravek, Optima, Candara, Droid Sans, Arial, sans-serif;
   font-size: 120%;
 }
 code {
