--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -1,6 +1,6 @@
 body {
-  font-family: Seravek, Optima, Candara, Calibri, Droid Sans, Arial, sans-serif;
-  font-size: 150%;
+  font-family: Century Gothic, Seravek, Optima, Calibri, Candara, Droid Sans, Arial, sans-serif;
+  font-size: 120%;
 }
 code {
   font-family: Monaco, Consolas, Lucida Console, monospace;
