--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -1,6 +1,6 @@
 body {
-  font-family: Seravek, Optima, Calibri, Candara, Droid Sans, Arial, sans-serif;
-  font-size: 120%;
+  font-family: Verdana, Corbel, Seravek, Optima, Calibri, Candara, Droid Sans, Arial, sans-serif;
+  font-size: 110%;
 }
 code {
   font-family: Monaco, Consolas, Lucida Console, monospace;
