--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, Corbel, DejaVu Sans, Verdana,  Seravek, Optima, Calibri, Candara, Droid Sans , sans-serif;
+  font-family: Calibri, Corbel, DejaVu Sans, Verdana,  Seravek, Optima, Calibri, Candara, Droid Sans , sans-serif;
   font-size: 110%;
 }
 code {
