--- a/themes/hugo-lithium/layouts/partials/footer.html
+++ b/themes/hugo-lithium/layouts/partials/footer.html
@@ -1,6 +1,9 @@
       <footer class="footer">
         <ul class="footer-links">
           <li>
+            © <script>document.write(new Date().getFullYear())</script> JW Tsai   
+          </li>
+          <li>
             <a href="{{ .Site.RSSLink | relURL }}" type="application/rss+xml" target="_blank">RSS feed</a>
           </li>
           <li>
