--- a/themes/hugo-lithium/layouts/partials/likecoin-button.html
+++ b/themes/hugo-lithium/layouts/partials/likecoin-button.html
@@ -7,13 +7,13 @@
   <meta name="Generator" content="Cocoa HTML Writer">
   <meta name="CocoaVersion" content="2022.5">
   <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 16.0px Menlo; color: #1f1f1f; -webkit-text-stroke: #1f1f1f; background-color: #efefef}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 16.0px Menlo; color: #1f1f1f; -webkit-text-stroke: #1f1f1f}
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 16.0px Menlo; color: #181818; -webkit-text-stroke: #181818; background-color: #ebebeb}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 16.0px Menlo; color: #181818; -webkit-text-stroke: #181818; background-color: #ebebeb; min-height: 19.0px}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
     span.s1 {font-kerning: none}
-    span.s2 {font-kerning: none; color: #361b07; background-color: #e0e0e0; -webkit-text-stroke: 0px #361b07}
-    span.s3 {font-kerning: none; background-color: #efefef}
+    span.s2 {font-kerning: none; color: #281509; background-color: #d9d9d9; -webkit-text-stroke: 0px #281509}
     table.t1 {background-color: #ffffff; border-collapse: collapse}
-    td.td1 {width: 346.4px; padding: 0.0px 10.0px 0.0px 10.0px}
+    td.td1 {width: 558.7px; padding: 0.0px 10.0px 0.0px 10.0px}
   </style>
 </head>
 <body>
@@ -24,7 +24,9 @@
         <p class="p1"><span class="s1">&lt;<b>div</b> class="likecoin-embed likecoin-button"&gt;</span></p>
         <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;<b>div</b>&gt;&lt;/<b>div</b>&gt;</span></p>
         <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;<b>iframe</b> <b>scrolling</b>="no" <b>frameborder</b>="0" <b>src</b>="https://button.like.co/in/embed/</span><span class="s2">tsai_jiewen</span><span class="s1">/button?"&gt;&lt;/<b>iframe</b>&gt;</span></p>
-        <p class="p2"><span class="s3">&lt;/<b>div</b>&gt;</span></p>
+        <p class="p1"><span class="s1">&lt;/<b>div</b>&gt;</span></p>
+        <p class="p2"><span class="s1"></span><br></p>
+        <p class="p3"><span class="s1">{{ end }}</span></p>
       </td>
     </tr>
   </tbody>
