--- a/themes/hugo-lithium/layouts/_default/single.html
+++ b/themes/hugo-lithium/layouts/_default/single.html
@@ -8,6 +8,7 @@
   <meta name="CocoaVersion" content="2022.5">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
     span.s1 {font-kerning: none}
   </style>
 </head>
@@ -17,7 +18,7 @@
 <h1 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>{{ .Title }}</b></span></h1>
 <p class="p1"><span class="s1">{{ if eq .Section "post" }} {{ .Date.Format "2006-01-02" }} {{ end }}</span></p>
 <p class="p1"><span class="s1">{{ .Content }}<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1">{{ partial "likecoin-button.html" .}}<span class="Apple-converted-space"> </span></span></p>
+<p class="p3"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1">{{ partial "disqus.html" .}}<span class="Apple-converted-space"> </span></span></p>
 <p class="p1"><span class="s1">{{ partial "footer.html" . }}<span class="Apple-converted-space"> </span></span></p>
 </body>
