--- a/themes/hugo-lithium/layouts/partials/footer.html
+++ b/themes/hugo-lithium/layouts/partials/footer.html
@@ -6,10 +6,14 @@
           <li>
             <a href="https://gohugo.io/" class="footer-links-kudos">Made with <img src="{{ "images/hugo-logo.png" | relURL }}" alt="Img link to Hugo website" width="22" height="22"></a>
           </li>
+        <li>
+        <span class="copy"> &copy; {{ dateFormat "2006" now }} {{ .Site.Params.author }}.</span>
+        </li>
         </ul>
       </footer>
 
     </div>
+    
     {{ partial "footer_highlightjs" . }}
     {{ partial "footer_mathjax" . }}
     {{ template "_internal/google_analytics.html" . }}
