--- a/themes/hugo-lithium/static/css/main.css
+++ b/themes/hugo-lithium/static/css/main.css
@@ -323,3 +323,27 @@ img {
     box-shadow: none;
   }
 }
+
+
+
+.pre-next {
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pre-next-btn {
+  width: 46%;
+  padding: 10px 0;
+  border-radius: 4px;
+  border: 1px solid #dadce0;
+  -moz-transition: all .3s;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  background-color: #fff;
+}
+
+.pre-next-btn:hover {
+  box-shadow: 0 3px 10px rgba(0,0,0,.1); 
+}
