--- a/themes/hugo-lithium/layouts/_default/single.html
+++ b/themes/hugo-lithium/layouts/_default/single.html
@@ -25,7 +25,7 @@
     <a class="pre-next-btn bg" href="{{.Permalink}}"><svg t="1605930649708" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2619" width="22" height="22"><path d="M589.088 790.624L310.464 512l278.624-278.624 45.248 45.248L400.96 512l233.376 233.376z" fill="#515151" p-id="2620"></path></svg>上一篇<br><span>{{ .Title }}</span></a>
   {{end}}
   {{with .NextInSection}}
-    <a class="pre-next-btn bg" href="{{.Permalink}}">下一篇<br><span>{{ .Title }}</span><svg t="1605930744277" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2981" width="22" height="22"><path d="M434.944 790.624l-45.248-45.248L623.04 512l-233.376-233.376 45.248-45.248L713.568 512z" fill="#515151" p-id="2982"></path></svg></a>
+    <a class="pre-next-btn bg" href="{{.Permalink}}">下一篇<br><span>{{ .Title }}</span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"><path d="M434.944 790.624l-45.248-45.248L623.04 512l-233.376-233.376 45.248-45.248L713.568 512z" fill="#515151" p-id="2982"></path></svg></a>
   {{end}}
 </div>
   
