--- a/themes/hugo-lithium/layouts/_default/single.html
+++ b/themes/hugo-lithium/layouts/_default/single.html
@@ -22,7 +22,7 @@
   
   <div class="pre-next">
   {{with .PrevInSection}}
-    <a class="pre-next-btn bg" href="{{.Permalink}}"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline><path d="M589.088 790.624L310.464 512l278.624-278.624 45.248 45.248L400.96 512l233.376 233.376z" fill="#515151" p-id="2620"></path></svg><span>{{ .Title }}</span></a>
+    <a class="pre-next-btn bg" href="{{.Permalink}}"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg><span>{{ .Title }}</span></a>
   {{end}}
   {{with .NextInSection}}
     <a class="pre-next-btn bg" href="{{.Permalink}}"><span>{{ .Title }}</span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></a>
