--- a/themes/hugo-xmin/layouts/partials/footer.html
+++ b/themes/hugo-xmin/layouts/partials/footer.html
@@ -5,5 +5,10 @@
   {{ . | markdownify }}
   {{ end }}
   </footer>
+  
+  {{ partial "footer_highlightjs" . }}
+  {{ partial "footer_mathjax" . }}
+  {{ template "_internal/google_analytics.html" . }}
+  
   </body>
 </html>
