--- a/themes/hugo-xmin/layouts/partials/head_custom.html
+++ b/themes/hugo-xmin/layouts/partials/head_custom.html
@@ -1,3 +1,3 @@
 <link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.0.1/styles/default.min.css">
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.0.1/styles/github.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.0.1/highlight.min.js"></script>
