--- a/themes/hugo-xmin/layouts/partials/prev_next.html
+++ b/themes/hugo-xmin/layouts/partials/prev_next.html
@@ -1,6 +1,33 @@
-{{ if .Section }}
-<nav class="post-nav">
-  <span class="nav-prev">{{ with .NextInSection }}<a href="{{ .RelPermalink }}">&larr; {{ .Title }}</a>{{ end }}</span>
-  <span class="nav-next">{{ with .PrevInSection }}<a href="{{ .RelPermalink }}">{{ .Title }} &rarr;</a>{{ end }}</span>
+{{ if in (split "en,cn,zoey" ",") .Section }}
+{{ if or .PrevInSection .NextInSection }}
+<nav id="article-nav">
+    {{ if .PrevInSection }}
+    <a href="{{ .PrevInSection.RelPermalink }}" id="article-nav-older" class="article-nav-link-wrap">
+      <div class="article-nav-title"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i> {{ .PrevInSection.Title }}</div>
+    </a>
+    {{ end }}
+
+    {{ if .NextInSection }}
+    <a href="{{ .NextInSection.RelPermalink }}" id="article-nav-newer" class="article-nav-link-wrap">
+      <div class="article-nav-title">{{ .NextInSection.Title }} <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></div>
+    </a>
+    {{ end }}
 </nav>
+<script type="text/javascript">
+document.addEventListener('keyup', function(e) {
+  if (e.target.nodeName.toUpperCase() != 'BODY') return;
+  var url = false;
+  if (e.which == 37) {  // Left arrow
+    {{ if .PrevInSection }}
+    url = '{{ .PrevInSection.RelPermalink }}';
+    {{ end }}
+  } else if (e.which == 39) {  // Right arrow
+    {{ if .NextInSection }}
+    url = '{{ .NextInSection.RelPermalink }}';
+    {{ end }}
+  }
+  if (url) window.location = url;
+});
+</script>
+{{ end }}
 {{ end }}
