--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -11,7 +11,7 @@
 }
  
 body {
-  font-family: 'SweiSpringCJKtc-Regular', sans-serif;
+  font-family: 'FakePearl-Light', sans-serif;
   font-size: 115%;
   font-weight: 400
 }
