--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -16,7 +16,7 @@
 }
  
 body {
-  font-family: 'SweiDelLunaSansCJKtc-Regular', 'Georgia', serif;
+  font-family: 'SweiDelLunaSansCJKtc-Regular', sans-serif;
   font-size: 115%;
   font-weight: 400
 }
