--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -5,9 +5,9 @@
 }
 
 @font-face {
-  font-family: SweiSpringCJKtc-Regular;
-  src: url(https://cdn.jsdelivr.net/gh/max32002/swei-spring@1.065/WebFont/CJK%20TC/SweiSpringCJKtc-Regular.woff2) format("woff2")
-  , url(https://cdn.jsdelivr.net/gh/max32002/swei-spring@1.065/WebFont/CJK%20TC/SweiSpringCJKtc-Regular.woff) format("woff");
+  font-family: SweiSpringSugarCJKtc-Regular;
+  src: url(https://cdn.jsdelivr.net/gh/max32002/swei-spring@1.065/WebFont/CJK%20TC/SweiSpringSugarCJKtc-Regular.woff2) format("woff2")
+  , url(https://cdn.jsdelivr.net/gh/max32002/swei-spring@1.065/WebFont/CJK%20TC/SweiSpringSugarCJKtc-Regular.woff) format("woff");
 }
 
 @font-face {
@@ -16,7 +16,7 @@
 }
  
 body {
-  font-family: 'FakePearl-Light', sans-serif;
+  font-family: 'SweiSpringSugarCJKtc-Regular', sans-serif;
   font-size: 115%;
   font-weight: 400
 }
