--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -1,7 +1,7 @@
 @font-face {
-  font-family: FakePearl-Light;
-  src: url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Light.woff2) format("woff2")
-  , url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Light.woff) format("woff");
+  font-family: FakePearl-ExtraLight;
+  src: url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-ExtraLight.woff2) format("woff2")
+  , url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-ExtraLight.woff) format("woff");
 }
 
 @font-face {
@@ -16,7 +16,7 @@
 }
  
 body {
-  font-family: 'FakePearl-Light', sans-serif;
+  font-family: 'FakePearl-ExtraLight', sans-serif;
   font-size: 130%;
   font-weight: 400;
   letter-spacing: 0.5px
