--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -5,9 +5,9 @@
 }
 
 @font-face {
-  font-family: FakePearl-ExtraLight;
-  src: url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-ExtraLight.woff2) format("woff2")
-  , url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-ExtraLight.woff) format("woff");
+  font-family: TaiwanPearl-Regular;
+url(https://cdn.jsdelivr.net/gh/max32002/TaiwanPearl@2.125/webfont/TaiwanPearl-Regular.woff2) format("woff2")
+, url(https://cdn.jsdelivr.net/gh/max32002/TaiwanPearl@2.125/webfont/TaiwanPearl-Regular.woff) format("woff");
 }
 
 @font-face {
@@ -22,7 +22,7 @@
 }
  
 body {
-  font-family: 'FakePearl-Light', sans-serif;
+  font-family: 'TaiwanPearl-Regular', sans-serif;
   font-size: 125%;
   font-weight: 400;
   letter-spacing: 0.5px
