--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -27,7 +27,7 @@
 }
  
 body {
-  font-family: 'Noto Sans TC', sans-serif;
+  font-family: 'Noto Sans TC', serif;
   font-size: 125%;
   font-weight: 400;
   letter-spacing: 1px
