--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -1,9 +1,7 @@
-<style>
+
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
-</style>
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital@0;1&display=swap');
-</style>
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 
 @font-face {
   font-family: FakePearl-Light;
