--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -4,6 +4,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/chiron-fonts/chiron-sans-hk-pro@1.008/build/webfont/css/vf.css"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/chiron-fonts/chiron-sans-hk-pro@1.008/build/webfont/css/vf-italic.css"/>
+
 
 @font-face {
   font-family: FakePearl-Light;
@@ -30,7 +33,7 @@
 }
  
 body {
-  font-family: 'Lato', 'Noto Sans TC', sans-serif;
+  font-family: 'Lato', 'Chiron Sans HK Pro WS', sans-serif;
   font-size: 115%;
   font-weight: 400;
   letter-spacing: 1px
