--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -44,7 +44,7 @@
 }
  
 body {
-  font-family: 'Lato', 'TaipeiSansTCBeta', sans-serif;
+  font-family: 'Lato', 'TaipeiSansTCBeta-Regular', sans-serif;
   font-size: 115%;
   font-weight: 400;
   letter-spacing: 1px
