--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -6,10 +6,6 @@
 
 @import url('https://cdn.jsdelivr.net/gh/chiron-fonts/chiron-sans-hk-pro@1.008/build/webfont/css/vf.css');
 @import url('https://cdn.jsdelivr.net/gh/chiron-fonts/chiron-sans-hk-pro@1.008/build/webfont/css/vf-italic.css')
-  
-@import url('https://cdn.jsdelivr.net/gh/vdustr/taipei-sans-tc/packages/core/dist/Regular/TaipeiSansTCBeta-Regular.css')
-@import url('https://cdn.jsdelivr.net/gh/vdustr/taipei-sans-tc/packages/core/dist/Regular/TaipeiSansTCBeta-Light.css')
-@import url('https://cdn.jsdelivr.net/gh/vdustr/taipei-sans-tc/packages/core/dist/Regular/TaipeiSansTCBeta-Bold.css')
 
 @font-face {
   font-family: SweiSansCJKtc-Regular;
@@ -28,9 +24,15 @@
   font-family: SweiDelLunaSansCJKtc-Regular;
   src: url(https://cdn.jsdelivr.net/gh/max32002/swei-right-bottom-sans@2.130/WebFont/CJK%20TC/SweiDelLunaSansCJKtc-Regular.woff2) format("woff2");
 }
+
+@font-face {
+  font-family: FakePearl-Regular;
+  src: url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Regular.woff2) format("woff2")
+  , url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Regular.woff) format("woff");
+}
  
 body {
-  font-family: 'Lato', 'SweiSansCJKtc-Regular', sans-serif;
+  font-family: 'Lato', 'FakePearl-Regular', sans-serif;
   font-size: 115%;
   font-weight: 400;
   letter-spacing: 1px
