--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap')
 
 @import url('https://cdn.jsdelivr.net/gh/chiron-fonts/chiron-sans-hk-pro@1.008/build/webfont/css/vf.css');
 @import url('https://cdn.jsdelivr.net/gh/chiron-fonts/chiron-sans-hk-pro@1.008/build/webfont/css/vf-italic.css')
