--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -39,7 +39,7 @@
 
  
 body {
-  font-family: 'Montserrat', 'FakePearl-Light', sans-serif;
+  font-family: 'FakePearl-Light', sans-serif;
   font-size: 115%;
   font-weight: 400;
   letter-spacing: 1px
