--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -46,7 +46,7 @@
 
  
 body {
-  font-family: 'Georgia', 'SweiSpringSugarCJKtc-Medium', serif;
+  font-family: 'Optima', 'SweiSpringSugarCJKtc-Medium', serif;
   font-size: 100%;
   font-weight: 400;
   letter-spacing: 1px
