--- a/themes/hugo-prose/static/css/fonts.css
+++ b/themes/hugo-prose/static/css/fonts.css
@@ -46,7 +46,7 @@
 
  
 body {
-  font-family: Optima, 'SweiSpringSugarCJKtc-Medium', sans-serif;
+  font-family: Optima, 'FakePearl-Light', sans-serif;
   font-size: 110%;
   font-weight: 400;
   letter-spacing: 1px
